--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.0",
-    "node-sass": "^8.0.0",
+    "node-sass": "^9.0.0",
     "pug": "^3.0.2",
-    "pug-loader": "^2.4.0",
+    "pug-plugin": "^4.9.9",
     "sass-loader": "^14.1.0",
     "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4",
