--- a/package.json
+++ b/package.json
@@ -17,17 +17,14 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.10.0",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.8.0",
+    "mini-css-extract-plugin": "^1.6.2",
     "node-sass": "^9.0.0",
     "pug": "^3.0.2",
     "pug-plugin": "^4.9.9",
+    "sass": "^1.71.0",
     "sass-loader": "^14.1.0",
-    "webpack": "^5.90.2",
+    "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
-  },
-  "dependencies": {
-    "sass": "^1.71.0"
   }
 }
